// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders correctly with a comment notification 1`] = `
<li
  data-styleName="notification unread"
  onClick={[Function]}
>
  <div
    data-styleName="image-wraper"
  >
    <RoundImage
      url="bar.png"
    />
  </div>
  <div
    data-styleName="content"
  >
    <NotificationHeader
      notification={
        Object {
          "action": "newComment",
          "actor": Object {
            "avatarUrl": "bar.png",
            "id": 2,
            "name": "Marie Curie",
          },
          "comment": Object {
            "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
          "meta": Object {},
          "post": Object {
            "title": "Our Oceans",
          },
          "unread": true,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "action": "newComment",
          "actor": Object {
            "avatarUrl": "bar.png",
            "id": 2,
            "name": "Marie Curie",
          },
          "comment": Object {
            "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 1,
          "meta": Object {},
          "post": Object {
            "title": "Our Oceans",
          },
          "unread": true,
        }
      }
    />
    <div
      data-styleName="date"
    >
      21 years ago
    </div>
  </div>
</li>
`;

exports[`Notification renders correctly with a tag notification 1`] = `
<li
  data-styleName="notification unread"
  onClick={[Function]}
>
  <div
    data-styleName="image-wraper"
  >
    <RoundImage
      url="baz.png"
    />
  </div>
  <div
    data-styleName="content"
  >
    <NotificationHeader
      notification={
        Object {
          "action": "tag",
          "actor": Object {
            "avatarUrl": "baz.png",
            "id": 3,
            "name": "Arthur Fonzarelli",
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 2,
          "meta": Object {
            "reasons": Array [
              "tag: request",
            ],
          },
          "post": Object {
            "title": "I have so many things I need!",
          },
          "unread": true,
        }
      }
    />
    <NotificationBody
      notification={
        Object {
          "action": "tag",
          "actor": Object {
            "avatarUrl": "baz.png",
            "id": 3,
            "name": "Arthur Fonzarelli",
          },
          "createdAt": 1995-12-17T03:23:00.000Z,
          "id": 2,
          "meta": Object {
            "reasons": Array [
              "tag: request",
            ],
          },
          "post": Object {
            "title": "I have so many things I need!",
          },
          "unread": true,
        }
      }
    />
    <div
      data-styleName="date"
    >
      21 years ago
    </div>
  </div>
</li>
`;

exports[`NotificationBody renders correctly with a comment notification 1`] = `
<div
  data-styleName="body"
>
  <span
    data-styleName="bold"
  >
    Marie
  </span>
   Wrote: "
  I live right next to there and can come help out. I've never done …
  "
</div>
`;

exports[`NotificationBody renders correctly with a tag notification 1`] = `
<div
  data-styleName="body"
>
  <span
    data-styleName="bold"
  >
    Arthur
  </span>
   Wrote: "
  I have so many things I need!
  "
</div>
`;

exports[`NotificationHeader renders correctly with a comment notification 1`] = `
<div
  data-styleName="header"
>
  New Comment on 
  <span
    data-styleName="bold"
  >
    Our Oceans
  </span>
</div>
`;

exports[`NotificationHeader renders correctly with a tag notification 1`] = `
<div
  data-styleName="header"
>
  New Post in 
  <span
    data-styleName="bold"
  >
    #
    request
  </span>
</div>
`;

exports[`NotificationsDropdown renders correctly with a list of threads 1`] = `
<Connect(TopNavDropdown)
  body={
    <div
      data-styleName="notifications"
    >
      <Notification
        notification={
          Object {
            "action": "newComment",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "comment": Object {
              "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 1,
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": true,
          }
        }
      />
      <Notification
        notification={
          Object {
            "action": "tag",
            "actor": Object {
              "avatarUrl": "baz.png",
              "id": 3,
              "name": "Arthur Fonzarelli",
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 2,
            "meta": Object {
              "reasons": Array [
                "tag: request",
              ],
            },
            "post": Object {
              "title": "I have so many things I need!",
            },
            "unread": true,
          }
        }
      />
      <Notification
        notification={
          Object {
            "action": "newComment",
            "actor": Object {
              "avatarUrl": "bar.png",
              "id": 2,
              "name": "Marie Curie",
            },
            "comment": Object {
              "text": "I live right next to there and can come help out. I've never done petitioning but I'm sure it's an absolute blast",
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 1,
            "meta": Object {},
            "post": Object {
              "title": "Our Oceans",
            },
            "unread": false,
          }
        }
      />
      <Notification
        notification={
          Object {
            "action": "tag",
            "actor": Object {
              "avatarUrl": "baz.png",
              "id": 3,
              "name": "Arthur Fonzarelli",
            },
            "createdAt": 1995-12-17T03:23:00.000Z,
            "id": 2,
            "meta": Object {
              "reasons": Array [
                "tag: request",
              ],
            },
            "post": Object {
              "title": "I have so many things I need!",
            },
            "unread": false,
          }
        }
      />
    </div>
  }
  header={
    <div
      data-styleName="header-content"
    >
      <span
        data-styleName="tab active"
        onClick={[Function]}
      >
        Recent
      </span>
      <span
        data-styleName="tab"
        onClick={[Function]}
      >
        Unread
      </span>
      <span
        data-styleName="mark-read"
      >
        Mark all as read
      </span>
    </div>
  }
/>
`;

exports[`NotificationsDropdown renders correctly with an empty list 1`] = `
<Connect(TopNavDropdown)
  body={
    <div
      data-styleName="notifications"
    />
  }
  header={
    <div
      data-styleName="header-content"
    >
      <span
        data-styleName="tab active"
        onClick={[Function]}
      >
        Recent
      </span>
      <span
        data-styleName="tab"
        onClick={[Function]}
      >
        Unread
      </span>
      <span
        data-styleName="mark-read"
      >
        Mark all as read
      </span>
    </div>
  }
/>
`;
